# pynxtools-plugin-template

./: README.md  cookiecutter.json  tox.ini
.github/workflows/: run_checks.yaml
hooks/: post_gen_project.py  pre_gen_project.py
pynxtools-{{cookiecutter.reader_name}}/: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  mkdocs.yaml  pyproject.toml
pynxtools-{{cookiecutter.reader_name}}/.cspell/: custom-dictionary.txt
pynxtools-{{cookiecutter.reader_name}}/.github/workflows/: compatibility_with_pynxtools_release.yaml  compatibility_with_pynxtools_release.yml  cruft-update.yml  cruft_update.yaml  cruft_update.yml  cspell.json  mkdocs-deploy.yaml  mkdocs-deploy.yml  nomad-requirements.yml  publish-north.yaml  publish.yml  pylint.yml  pytest.yml  spellcheck.yaml  spellcheck.yml
pynxtools-{{cookiecutter.reader_name}}/docs/: contact.md  index.md
pynxtools-{{cookiecutter.reader_name}}/docs/learn/: versioning.md
pynxtools-{{cookiecutter.reader_name}}/docs/tutorial/: contributing.md  installation.md
pynxtools-{{cookiecutter.reader_name}}/licenses/: Apache-2  BSD-3  GPL-3  MIT  MPL-2
pynxtools-{{cookiecutter.reader_name}}/north_sources/.github/workflows/: publish-north.yml
pynxtools-{{cookiecutter.reader_name}}/py_sources/nomad/: README.md
pynxtools-{{cookiecutter.reader_name}}/py_sources/nomad/apps/: __init__.py
pynxtools-{{cookiecutter.reader_name}}/py_sources/nomad/example_uploads/: README.md  __init__.py
pynxtools-{{cookiecutter.reader_name}}/py_sources/nomad/example_uploads/example/: README.md
pynxtools-{{cookiecutter.reader_name}}/py_sources/nomad/north-tools/{{cookiecutter.north_tool_name}}/: Dockerfile  Dockerfile.jupyter  TODO.md  __init__.py
pynxtools-{{cookiecutter.reader_name}}/py_sources/nomad/north-tools/{{cookiecutter.reader_name}}_jupyter/: __init__.py
pynxtools-{{cookiecutter.reader_name}}/py_sources/nomad/north_tools/: __init__.py
pynxtools-{{cookiecutter.reader_name}}/py_sources/nomad/north_tools/{{cookiecutter.north_tool_name}}/: Dockerfile  README.md  __init__.py
pynxtools-{{cookiecutter.reader_name}}/py_sources/nomad/north_tools/{{cookiecutter.north_tool_name}}_north_tool/: Dockerfile  README.md
pynxtools-{{cookiecutter.reader_name}}/py_sources/tests/: test_nomad_apps.py  test_nomad_example_uploads.py  test_nomad_north_tools.py
pynxtools-{{cookiecutter.reader_name}}/py_sources/tests/nomad/: test_nomad_apps.py  test_nomad_example_uploads.py  test_nomad_north_tools.py
pynxtools-{{cookiecutter.reader_name}}/py_sources/tests_data/north_tools/{{cookiecutter.north_tool_name}}/: CommandLine.ipynb
pynxtools-{{cookiecutter.reader_name}}/scripts/: generate_custom_dict.sh  generate_reference_files.sh
pynxtools-{{cookiecutter.reader_name}}/src/pynxtools_{{cookiecutter.reader_name}}/: __init__.py  reader.py
pynxtools-{{cookiecutter.reader_name}}/src/pynxtools_{{cookiecutter.reader_name}}/nomad/: __init__.py
pynxtools-{{cookiecutter.reader_name}}/src/pynxtools_{{cookiecutter.reader_name}}/nomad/examples/: README.md
pynxtools-{{cookiecutter.reader_name}}/src/pynxtools_{{cookiecutter.reader_name}}/scripts/: generate_reference_files.sh
pynxtools-{{cookiecutter.reader_name}}/src/pynxtools_{{cookiecutter.reader_name}}/utils/: versioning.py
pynxtools-{{cookiecutter.reader_name}}/tests/: test_nomad_examples.py  test_reader.py  test_utils_versioning.py
pynxtools-{{cookiecutter.reader_name}}/tests/data/: README.md  config_file.json  create_mock_data.py  eln_data.yaml  mock_data.h5
pynxtools_{{cookiecutter.reader_name}}/: README.md  pyproject.toml
pynxtools_{{cookiecutter.reader_name}}/pynxtools_{{cookiecutter.reader_name}}/: reader.py
tests/: conftest.py  test_create_template.py
{{cookiecutter.project_slug}}/: pyproject.toml
{{cookiecutter.project_slug}}/tests/: test_reader.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_name}}/: reader.py
