[build-system]
requires = ["setuptools>=64.0.1", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

{%- set license_classifiers = {
    'MIT': 'License :: OSI Approved :: MIT License',
    'BSD-4-Clause': 'License :: OSI Approved :: BSD License',
    'Apache-2.0': 'License :: OSI Approved :: Apache Software License',
    'GPL-3.0-or-later': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}

[project]
name = "pynxtools-{{cookiecutter.reader_name}}"
dynamic = ["version"]
authors = [
    { name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}" },
]
description = "{{cookiecutter.description}}"
readme = "README.md"
{%- if cookiecutter.license in license_classifiers %}
license= {text = "{{ cookiecutter.license }}"}
{%- endif %}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
{%- if cookiecutter.license in license_classifiers %}
    "{{ license_classifiers[cookiecutter.license] }}",
{%- endif %}
    "Operating System :: OS Independent",
]
dependencies = [
    "pynxtools>=0.0.10"
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "types-pyyaml",
    "pip-tools",
]

[project.entry-points."pynxtools.reader"]
{{cookiecutter.reader_name}} = "pynxtools_{{cookiecutter.reader_name}}.reader:{{cookiecutter.class_name}}"